# RayTracer

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: AccelerationStructure.h.16D48DB202DF7227.idx  BruteForce.cpp.BE1C896680642684.idx  BruteForce.h.FCD62265E2EF3886.idx  BruteForceTraceIntegrator.cpp.2DD6A17BEAC57158.idx  BruteForceTraceIntegrator.cpp.99B20C3FE3C12E45.idx  BruteForceTraceIntegrator.h.D3CF08EB518A114F.idx  BruteForceTraceIntegrator.h.F7D8373E0B70DDCB.idx  Camera.cpp.5D5A5D1BC1627AFC.idx  Camera.cpp.60A993C6999C3B24.idx  Camera.h.ED834AFAF206AC10.idx  Camera.h.FA5FF1A8604BA8E1.idx  Camera.hpp.9980A47AD23CCAF5.idx  CameraSample.h.0377DF9BB72BE2F0.idx  CameraSample.h.C3EB81F5CCA7192F.idx  Color.h.105020E97BBC384C.idx  Color.h.D123D293BF1CCA01.idx  Color.hpp.39EFD1C43B88D7CA.idx  DefaultRayCaster.cpp.42ED3C58ECF99D01.idx  DefaultRayCaster.cpp.F95F3AA090CDAFE2.idx  DefaultRayCaster.h.23CEFBAD4FD76000.idx  DefaultRayCaster.h.FFA98C2518BA6A9E.idx  FrameBuffer.cpp.7D1944B5725CACA2.idx  FrameBuffer.cpp.F8A78A477C6A382C.idx  FrameBuffer.h.634DC7D45F52B753.idx  FrameBuffer.h.D2EB77A8B6DA9B4B.idx  FrameBuffer.hpp.E6AC2E6E8FC4A7EE.idx  Framebuffer.cpp.B305D4DD436D2C03.idx  Framebuffer.hpp.E7EFDC9D8D6C4B12.idx  LoaderGltf.cpp.4FEC5859AEEAE6E5.idx  LoaderGltf.h.384DBFCC71240A0B.idx  Model.cpp.D74D8E31A953645B.idx  Model.h.0D1B79F3E1C55BEC.idx  Object.hpp.2D0E8257C67ECFCA.idx  Ray.cpp.68E863B062C5D43A.idx  Ray.cpp.6C588B1387E99C11.idx  Ray.cpp.A4D447DCCA8617CA.idx  Ray.h.03C3F906A51F72F7.idx  Ray.h.DBF9F81902D6C9FE.idx  Ray.hpp.88F47EBB7B83AC30.idx  Ray.hpp.AF62E49C19976717.idx  (+40 more)
notes/: todo.txt
shaders/: bvh.slang  checker.slang  kdtree.slang  main.slang  raytrace.slang  raytracer.slang  sahbvh.slang  test.slang
src/: Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  CameraSample.h  FrameBuffer.h  Framebuffer.cpp  Framebuffer.hpp  LoaderGltf.cpp  LoaderGltf.h  Ray.cpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  ScreenSettings.h  main.cpp
src/core/: FrameBuffer.cpp  FrameBuffer.h  RayTracerApplication.cpp  RayTracerApplication.h  Scene.cpp  Scene.h
src/gpu/: RendererGPU.cpp  RendererGPU.h
src/object/: Model.h  Object.hpp  Sphere.cpp  Sphere.hpp
src/objects/: Camera.cpp  Camera.h  CameraSample.h  Color.h  ScreenSettings.h  UtilObjects.h
src/render/: BruteForceTraceIntegrator.cpp  BruteForceTraceIntegrator.h  DefaultRayCaster.cpp  DefaultRayCaster.h  Ray.cpp  Ray.h  RayCaster.h  Renderer.cpp  Renderer.h  TraceIntegrator.h
src/render/cpu/: BruteForceTraceIntegrator.cpp  BruteForceTraceIntegrator.h  DefaultRayCaster.cpp  DefaultRayCaster.h  Ray.cpp  Ray.h  RayCaster.h  Renderer.cpp  Renderer.h  TraceIntegrator.h
src/render/gpu/: AccelerationStructure.h  BVH.cpp  BVH.h  BVHShared.h  BruteForce.cpp  BruteForce.h  Checker.cpp  Checker.h  KDTree.cpp  KDTree.h  Renderer.cpp  Renderer.h  RendererGPU.cpp  RendererGPU.h  SAHBVH.cpp  SAHBVH.h  VkCore.cpp  VkCore.h
src/utils/: SceneLoader.cpp  SceneLoader.h  utils.cpp  utils.h
